<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <EditText
            android:id="@+id/recipeNameEt"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/recipeTrackEt"
            app:layout_constraintTop_toBottomOf="@+id/addRecipeTitle"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>

    <Button
            android:id="@+id/addRecipeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/add_recipe_btn_txt"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeIsAwesomeCb" android:layout_marginTop="16dp"/>

    <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/addrecipe_name_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/recipeNameEt"
            app:layout_constraintEnd_toStartOf="@+id/recipeNameEt"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/artistLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/addrecipe_artist_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/recipeArtistEt"
            app:layout_constraintEnd_toStartOf="@+id/recipeArtistEt"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:id="@+id/recipeArtistEt"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Artist"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/recipeTrackEt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/recipeNameEt"/>

    <TextView
            android:id="@+id/trackLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/addrecipe_track_num_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/recipeTrackEt"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"/>

    <EditText
            android:id="@+id/recipeTrackEt"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="1"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/trackLabel"
            app:layout_constraintTop_toBottomOf="@+id/recipeArtistEt" android:layout_marginTop="16dp"/>

    <TextView
            android:id="@+id/addRecipeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/add_recipe_screen_title"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
            android:id="@+id/recipeIsAwesomeCb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/addrecipe_is_awesome_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeTrackEt" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
